third_party/move/move-compiler-v2/tests/more-v1/parser/use_module_member_invalid_missing_semicolon.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/use_module_member_invalid_missing_semicolon.move:5:1
  │
5 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'
